-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.3.0, Lustre 2.4.0
-
SWL hyperion
-
3
-
4389
Had a client crash
2012-10-07 08:26:22 general protection fault: 0000 [#1] SMP
2012-10-07 08:26:22 last sysfs file: /sys/devices/pci0000:00/0000:00:01.0/0000:01:00.0/irq
[10/7/12 8:37:37 AM] Cliff White: 2012-10-07 08:26:22 Pid: 4119, comm: ptlrpcd_2 Tainted: G W --------------- 2.6.32-279.5.1.el6.x86_64 #1 Dell XS23-TY /XS23-TY
2012-10-07 08:26:22 RIP: 0010:[<ffffffff8104e2e1>] [<ffffffff8104e2e1>] __wake_up_common+0x31/0x90
2012-10-07 08:26:22 RSP: 0018:ffff880181f05970 EFLAGS: 00010096
2012-10-07 08:26:22 RAX: 5a5a5a5a5a5a5a42 RBX: ffff880101760a18 RCX: 0000000000000000
2012-10-07 08:26:22 RDX: 5a5a5a5a5a5a5a5a RSI: 0000000000000003 RDI: ffff880101760a18
2012-10-07 08:26:22 RBP: ffff880181f059b0 R08: 0000000000000000 R09: 0000000000000000
2012-10-07 08:26:22 R10: 0000000000000001 R11: 0000000000000000 R12: 0000000000000286
2012-10-07 08:26:22 R13: ffff880101760a20 R14: 0000000000000000 R15: 0000000000000000
2012-10-07 08:26:22 FS: 00007ffff7fdd700(0000) GS:ffff880028200000(0000) knlGS:0000000000000000
2012-10-07 08:26:22 CS: 0010 DS: 0000 ES: 0000 CR0: 000000008005003b
2012-10-07 08:26:22 CR2: 00002aaab800b078 CR3: 0000000151898000 CR4: 00000000000006f0
2012-10-07 08:26:22 DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
2012-10-07 08:26:22 DR3: 0000000000000000 DR6: 00000000ffff0ff0 DR7: 0000000000000400
2012-10-07 08:26:22 Process ptlrpcd_2 (pid: 4119, threadinfo ffff880181f04000, task ffff8801ba3f7500)
2012-10-07 08:26:22 Stack:
2012-10-07 08:26:22 ffff880181f05a00 0000000300000000 0000000000000001 ffff880101760a18
2012-10-07 08:26:22 <d> 0000000000000286 0000000000000003 0000000000000000 0000000000000000
2012-10-07 08:26:22 <d> ffff880181f059f0 ffffffff810533e8 ffffffffffffff8a ffff880101760a10
[10/7/12 8:38:01 AM] Cliff White: 2012-10-07 08:26:22 Call Trace:
2012-10-07 08:26:22 [<ffffffff810533e8>] __wake_up+0x48/0x70
2012-10-07 08:26:22 [<ffffffffa0372797>] cfs_waitq_broadcast+0x17/0x20 [libcfs]
2012-10-07 08:26:22 [<ffffffffa0542f39>] cl_sync_io_note+0x139/0x180 [obdclass]
2012-10-07 08:26:22 [<ffffffffa0538c45>] cl_page_completion+0x155/0x680 [obdclass]
2012-10-07 08:26:22 [<ffffffff8105368d>] ? task_rq_lock+0x5d/0xa0
2012-10-07 08:26:22 [<ffffffff810600bc>] ? try_to_wake_up+0x24c/0x3e0
2012-10-07 08:26:22 [<ffffffffa08671d2>] osc_ap_completion+0x222/0x980 [osc]
2012-10-07 08:26:22 [<ffffffff81060262>] ? default_wake_function+0x12/0x20
2012-10-07 08:26:22 [<ffffffff8104e309>] ? __wake_up_common+0x59/0x90
2012-10-07 08:26:22 [<ffffffffa068942d>] ? lustre_msg_buf+0x5d/0x60 [ptlrpc]
2012-10-07 08:26:22 [<ffffffffa0867cbd>] osc_extent_finish+0x38d/0xa30 [osc]
2012-10-07 08:26:22 [<ffffffffa0688fbc>] ? lustre_msg_get_opc+0x9c/0x110 [ptlrpc]
2012-10-07 08:26:22 [<ffffffffa0847d0b>] ? osc_brw_fini_request+0x10b/0x1360 [osc]
2012-10-07 08:26:22 [<ffffffffa0372bae>] ? cfs_free+0xe/0x10 [libcfs]
2012-10-07 08:26:22 [<ffffffffa06a9b38>] ? at_measured+0x108/0x390 [ptlrpc]
2012-10-07 08:26:22 [<ffffffffa06a9b38>] ? at_measured+0x108/0x390 [ptlrpc]
2012-10-07 08:26:22 [<ffffffffa084a0ef>] brw_interpret+0x30f/0x11b0 [osc]
2012-10-07 08:26:22 [<ffffffffa06850e9>] ? ptlrpc_unregister_bulk+0x99/0xad0 [ptlrpc]
2012-10-07 08:26:22 [<ffffffffa067ec2f>] ptlrpc_check_set+0x29f/0x1ae0 [ptlrpc]
2012-10-07 08:26:22 [<ffffffffa06b17eb>] ptlrpcd_check+0x53b/0x560 [ptlrpc]
2012-10-07 08:26:22 [<ffffffffa06b1d1b>] ptlrpcd+0x22b/0x3a0 [ptlrpc]
2012-10-07 08:26:22 [<ffffffff81060250>] ? default_wake_function+0x0/0x20
2012-10-07 08:26:22 [<ffffffffa06b1af0>] ? ptlrpcd+0x0/0x3a0 [ptlrpc]
2012-10-07 08:26:22 [<ffffffff8100c14a>] child_rip+0xa/0x20
2012-10-07 08:26:22 [<ffffffffa06b1af0>] ? ptlrpcd+0x0/0x3a0 [ptlrpc]
2012-10-07 08:26:22 [<ffffffffa06b1af0>] ? ptlrpcd+0x0/0x3a0 [ptlrpc]
2012-10-07 08:26:22 [<ffffffff8100c140>] ? child_rip+0x0/0x20
2012-10-07 08:26:22 Code: 41 56 41 55 41 54 53 48 83 ec 18 0f 1f 44 00 00 89 75 cc 89 55 c8 4c 8d 6f 08 48 8b 57 08 41 89 cf 4d 89 c6 48 8d 42 e8 49 39 d5 <48> 8b 58 18 74 3f 48 83 eb 18 eb 0a 0f 1f 00 48 89 d8 48 8d 5a
2012-10-07 08:26:22 RIP [<ffffffff8104e2e1>] __wake_up_common+0x31/0x90
2012-10-07 08:26:22 RSP <ffff880181f05970>
2012-10-07 08:26:22 Initializing cgroup subsys cpuset