lustre/obdclass/cl_io.c
@@ -1683,11 +1683,12 @@ EXPORT_SYMBOL(cl_req_attr_set);
  */
 void cl_sync_io_init(struct cl_sync_io *anchor, int nrpages)
 {
-        ENTRY;
-        cfs_waitq_init(&anchor->csi_waitq);
-        cfs_atomic_set(&anchor->csi_sync_nr, nrpages);
-        anchor->csi_sync_rc  = 0;
-        EXIT;
+	ENTRY;
+	cfs_waitq_init(&anchor->csi_waitq);
+	cfs_atomic_set(&anchor->csi_sync_nr, nrpages);
+	cfs_atomic_set(&anchor->csi_barrier, nrpages > 0);
+	anchor->csi_sync_rc = 0;
+	EXIT;
 }
 EXPORT_SYMBOL(cl_sync_io_init);
 
@@ -1725,8 +1726,16 @@ int cl_sync_io_wait(const struct lu_env *env, struct cl_io *io,
         }
         LASSERT(cfs_atomic_read(&anchor->csi_sync_nr) == 0);
         cl_page_list_assume(env, io, queue);
-        POISON(anchor, 0x5a, sizeof *anchor);
-        RETURN(rc);
+
+	/* wait until cl_sync_io_note() has done wakeup */
+	while (unlikely(cfs_atomic_read(&anchor->csi_barrier) != 0)) {
+#ifdef __KERNEL__
+		cpu_relax();
+#endif
+	}
+
+	POISON(anchor, 0x5a, sizeof *anchor);
+	RETURN(rc);
 }
 EXPORT_SYMBOL(cl_sync_io_wait);
 
@@ -1744,8 +1753,11 @@ void cl_sync_io_note(struct cl_sync_io *anchor, int ioret)
          * IO.
          */
         LASSERT(cfs_atomic_read(&anchor->csi_sync_nr) > 0);
-        if (cfs_atomic_dec_and_test(&anchor->csi_sync_nr))
-                cfs_waitq_broadcast(&anchor->csi_waitq);
-        EXIT;
+	if (cfs_atomic_dec_and_test(&anchor->csi_sync_nr)) {
+		cfs_waitq_broadcast(&anchor->csi_waitq);
+		/* it's safe to nuke or reuse anchor now */
+		cfs_atomic_set(&anchor->csi_barrier, 0);
+	}
+	EXIT;
 }
 EXPORT_SYMBOL(cl_sync_io_note);
